--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "managing-a-component-tree-practice",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://kelvyn2012.github.io",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
@@ -10,13 +11,16 @@
     "react-scripts": "3.2.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "typescript": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
